# kanu-hohenlohe

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  update.yml
backtest/: report_template.html  run.py
config/: catchment.geojson  config.yaml
data/: status.json  status.prev.json
data/hvz/doerzbach/2026/: 04.json  05.json  06.json  07.json
data/hvz/jagstzell/2026/: 04.json  05.json  06.json  07.json
data/weather/area_mean/2026/: 04.json  05.json  06.json  07.json
docs/: HANDOFF.md  RELEASE.md
docs/superpowers/plans/: 2026-04-18-kanu-hohenlohe.md
docs/superpowers/specs/: 2026-04-18-kanu-hohenlohe-design.md
src/: config.py  main.py
src/engine/: ampel.py
src/fetcher/: hvz.py  wetter.py
src/notify/: telegram.py
src/storage/: archive.py  status.py
tests/: test_ampel.py  test_archive.py  test_backtest.py  test_config.py  test_hvz.py  test_main_integration.py  test_status.py  test_telegram.py  test_wetter.py
tests/fixtures/: hvz_doerzbach_ok.json  hvz_doerzbach_wartung.json  openmeteo_forecast.json
web/: app.js  index.html  styles.css
